improved the moviecard